--- a/style.css
+++ b/style.css
@@ -4,10 +4,29 @@ html{
 }
 body {
     background-color: rgb(248, 235, 211);
+    margin: 0;
 }
 p {
     font-size: 1.5rem;
 }
 ol {
     font-size: 1.5rem;
+}
+.kashew{
+    font-weight: 900;
+    color: brown;
+}
+#header {
+    background-image: url(https://thumbs.dreamstime.com/b/angry-businessman-working-laptop-1916581.jpg);
+    background-position: center;
+    background-size: contain;
+    height: 55rem;
+    color: rgb(139, 35, 16);
+    font-size: 2rem;
+    border-radius: 0 0 1.2em 1.2em;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 5%;
 }
